--- a/task-list/src/styles.scss
+++ b/task-list/src/styles.scss
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+@import './dist/scss/variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+}
+
+body {
+    background-color: $primary-background-color;
+}
+
+ul{
+    list-style: none;
+}
+
+//Class
+.container {
+    width: 350px;
+    margin: 50px auto;
+}
