--- a/task-list/src/app/modules/home/components/app-list/app-list.component.scss
+++ b/task-list/src/app/modules/home/components/app-list/app-list.component.scss
@@ -36,6 +36,7 @@ section{
 
                     font-size: 16px;
                     color: $primary-text-color;
+                    background-color: $secondary-background-color;
                     &.checked{
                         text-decoration: line-through;
                     }
