--- a/task-list/src/styles.scss
+++ b/task-list/src/styles.scss
@@ -1,11 +1,11 @@
 @import './dist/scss/variables.scss';
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-family: 'Mukta', sans-serif;
+    font-weight: 600;
 }
 
 body {
@@ -14,6 +14,14 @@ body {
 
 ul{
     list-style: none;
+}
+
+textarea:focus, input:focus, button{
+    outline: none;
+}
+
+button{
+    cursor: pointer;
 }
 
 //Class
