--- a/task-list/src/app/modules/home/components/app-list/app-list.component.html
+++ b/task-list/src/app/modules/home/components/app-list/app-list.component.html
@@ -3,9 +3,10 @@
 <ul *ngIf="taskList.length">
     <li *ngFor="let item of taskList; let i = index">
         <input type="checkbox" [(ngModel)]="item.checked">
-        <input type="text" [(ngModel)]="item.task">
+        <input type="text" (keyup)="validationInput(item.task, i)" [(ngModel)]="item.task"
+        [ngClass]="{'checked': item.checked}">
 
-        <button>
+        <button (click)="deleteItemTaskList(i)">
             <img src="assets/icons/delete.svg" alt="">
         </button>
     </li>
@@ -13,5 +14,5 @@
 
 </section>
 
-<app-input-add-items></app-input-add-items>
-<app-button-delete-all *ngIf="taskList.length"></app-button-delete-all>
+<app-input-add-items (emitItemTaskList)="setEmitTaskList($event)"></app-input-add-items>
+<app-button-delete-all *ngIf="taskList.length" (click)="deleteAllTaskList()"></app-button-delete-all>
