--- a/task-list/src/app/modules/home/components/input-add-items/input-add-items.component.scss
+++ b/task-list/src/app/modules/home/components/input-add-items/input-add-items.component.scss
@@ -9,6 +9,7 @@
         width: 80%;
 
         border: none;
+        border-radius: 15px;
         background: $tertiary-background-color;
 
         font-size: 16px;
