--- a/task-list/src/app/modules/home/components/app-list/app-list.component.scss
+++ b/task-list/src/app/modules/home/components/app-list/app-list.component.scss
@@ -8,6 +8,7 @@ section{
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
 
     margin-top: 20px;
+    border-radius: 25px;
 
     &.loading{
         background-image: url("../../../../../assets/img/Checklist-bro.svg");
@@ -17,6 +18,7 @@ section{
 
     ul{
         padding: 20px;
+        
 
         li{
             display: flex;
@@ -24,7 +26,7 @@ section{
             align-items: center;
 
             margin-bottom: 10px;
-
+           
             input{
                 &[type="checkbox"]{
                     width: 5%;
@@ -40,6 +42,7 @@ section{
                     &.checked{
                         text-decoration: line-through;
                     }
+                    
                 }
             }
 
