--- a/task-list/src/app/modules/home/components/input-add-items/input-add-items.component.html
+++ b/task-list/src/app/modules/home/components/input-add-items/input-add-items.component.html
@@ -1,1 +1,2 @@
-<input type="text" placeholder="Digite sua nova task aqui...">
+<input type="text" placeholder="Digite sua nova task aqui..." [(ngModel)]="addItemTasklist"
+ (keyup.enter)="submitItemTaskList()">
